success, extracted node, and port then set description
