# network_builder/api/v1alpha1/zz_generated.deepcopy.go
@@ -461,23 +461,8 @@ func (in *PortTailorList) DeepCopyObject() runtime.Object {
 // DeepCopyInto is an autogenerated deepcopy function, copying the receiver, writing into out. in must be non-nil.
 func (in *PortTailorSpec) DeepCopyInto(out *PortTailorSpec) {
 	*out = *in
-	if in.Nodes != nil {
-		in, out := &in.Nodes, &out.Nodes
-		*out = make([]string, len(*in))
-		copy(*out, *in)
-	}
-	if in.NodeSelector != nil {
-		in, out := &in.NodeSelector, &out.NodeSelector
-		*out = make([]string, len(*in))
-		copy(*out, *in)
-	}
-	if in.LoginBanner != nil {
-		in, out := &in.LoginBanner, &out.LoginBanner
-		*out = make([]string, len(*in))
-		copy(*out, *in)
-	}
-	if in.PortLibrarySelector != nil {
-		in, out := &in.PortLibrarySelector, &out.PortLibrarySelector
+	if in.Ports != nil {
+		in, out := &in.Ports, &out.Ports
 		*out = make([]string, len(*in))
 		copy(*out, *in)
 	}
